// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: DropShadowWrapper renders 1`] = `
<View
  pointerEvents="box-none"
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        {
          "start": 10,
          "top": 20,
        },
      ]
    }
  >
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth={41}
      focusable={false}
      height="100%"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
            "start": -40,
            "top": 0,
          },
          {
            "flex": 0,
            "height": "100%",
            "width": 41,
          },
        ]
      }
      width={41}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0,
                438654908,
                1,
                2447292,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="start.0"
            x1="1"
            x2="0"
            y1="0"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            [
              1,
              "start.0",
            ]
          }
          height="100%"
          propList={
            [
              "fill",
            ]
          }
          width={40}
          x={0}
          y={-0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth={41}
      focusable={false}
      height="100%"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
            "start": "100%",
            "top": 0,
          },
          {
            "flex": 0,
            "height": "100%",
            "width": 41,
          },
        ]
      }
      width={41}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0,
                438654908,
                1,
                2447292,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="end.0"
            x1="0"
            x2="1"
            y1="0"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            [
              1,
              "end.0",
            ]
          }
          height="100%"
          propList={
            [
              "fill",
            ]
          }
          width={40}
          x={0}
          y={-0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={41}
      bbWidth="100%"
      focusable={false}
      height={41}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
            "start": 0,
            "top": -40,
          },
          {
            "flex": 0,
            "height": 41,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0,
                438654908,
                1,
                2447292,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="top.0"
            x1="0"
            x2="0"
            y1="1"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            [
              1,
              "top.0",
            ]
          }
          height={40}
          propList={
            [
              "fill",
            ]
          }
          width="100%"
          x={-0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={41}
      bbWidth="100%"
      focusable={false}
      height={41}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
            "start": 0,
            "top": "100%",
          },
          {
            "flex": 0,
            "height": 41,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0,
                438654908,
                1,
                2447292,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="bottom.0"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            [
              1,
              "bottom.0",
            ]
          }
          height={40}
          propList={
            [
              "fill",
            ]
          }
          width="100%"
          x={-0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={41}
      bbWidth={41}
      focusable={false}
      height={41}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
            "start": -40,
            "top": -40,
          },
          {
            "flex": 0,
            "height": 41,
            "width": 41,
          },
        ]
      }
      width={41}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={40}
            cy={40}
            fx={40}
            fy={40}
            gradient={
              [
                0,
                438654908,
                0.9999999999999999,
                2447292,
                1,
                2447292,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="topStart.0"
            rx={40}
            ry={40}
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            [
              1,
              "topStart.0",
            ]
          }
          height={40}
          propList={
            [
              "fill",
            ]
          }
          width={40}
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={41}
      bbWidth={41}
      focusable={false}
      height={41}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
            "start": "100%",
            "top": -40,
            "transform": [
              {
                "translateX": -0,
              },
            ],
          },
          {
            "flex": 0,
            "height": 41,
            "width": 41,
          },
        ]
      }
      width={41}
    >
      <RNSVGGroup
        matrix={
          [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={40}
            fx={0}
            fy={40}
            gradient={
              [
                0,
                438654908,
                0.9999999999999999,
                2447292,
                1,
                2447292,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="topEnd.0"
            rx={40}
            ry={40}
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            [
              1,
              "topEnd.0",
            ]
          }
          height={40}
          propList={
            [
              "fill",
            ]
          }
          width={40}
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={41}
      bbWidth={41}
      focusable={false}
      height={41}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
            "start": -40,
            "top": "100%",
            "transform": [
              {
                "translateY": -0,
              },
            ],
          },
          {
            "flex": 0,
            "height": 41,
            "width": 41,
          },
        ]
      }
      width={41}
    >
      <RNSVGGroup
        matrix={
          [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={40}
            cy={0}
            fx={40}
            fy={0}
            gradient={
              [
                0,
                438654908,
                0.9999999999999999,
                2447292,
                1,
                2447292,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="bottomStart.0"
            rx={40}
            ry={40}
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            [
              1,
              "bottomStart.0",
            ]
          }
          height={40}
          propList={
            [
              "fill",
            ]
          }
          width={40}
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={41}
      bbWidth={41}
      focusable={false}
      height={41}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
            "start": "100%",
            "top": "100%",
            "transform": [
              {
                "translateX": -0,
              },
              {
                "translateY": -0,
              },
            ],
          },
          {
            "flex": 0,
            "height": 41,
            "width": 41,
          },
        ]
      }
      width={41}
    >
      <RNSVGGroup
        matrix={
          [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={0}
            fx={0}
            fy={0}
            gradient={
              [
                0,
                438654908,
                0.9999999999999999,
                2447292,
                1,
                2447292,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="bottomEnd.0"
            rx={40}
            ry={40}
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            [
              1,
              "bottomEnd.0",
            ]
          }
          height={40}
          propList={
            [
              "fill",
            ]
          }
          width={40}
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth="100%"
      focusable={false}
      height="100%"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
          },
          {
            "flex": 0,
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGMask
            height="100%"
            maskContentUnits={1}
            maskTransform={
              [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            maskUnits={0}
            name="maskInside.0"
            width="100%"
            x="0%"
            y="0%"
          >
            <RNSVGRect
              fill={4294967295}
              height="100%"
              propList={
                [
                  "fill",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={0}
              propList={
                [
                  "fill",
                ]
              }
              width={0}
              x={0}
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={0}
              matrix={
                [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              propList={
                [
                  "fill",
                ]
              }
              width={0}
              x="100%"
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={0}
              matrix={
                [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              propList={
                [
                  "fill",
                ]
              }
              width={0}
              x={0}
              y="100%"
            />
            <RNSVGRect
              fill={4278190080}
              height={0}
              matrix={
                [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              propList={
                [
                  "fill",
                ]
              }
              width={0}
              x="100%"
              y="100%"
            />
          </RNSVGMask>
        </RNSVGDefs>
        <RNSVGRect
          fill={4280637372}
          fillOpacity={0.1}
          height="100%"
          mask="maskInside.0"
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          width="100%"
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      [
        {
          "alignSelf": "flex-start",
          "borderBottomLeftRadius": 0,
          "borderBottomRightRadius": 0,
          "borderTopLeftRadius": 0,
          "borderTopRightRadius": 0,
        },
        {},
        {
          "alignSelf": "stretch",
        },
      ]
    }
  >
    <View
      pointerEvents="box-none"
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            undefined,
            {
              "start": 0,
              "top": 1,
            },
          ]
        }
      >
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth={11}
          focusable={false}
          height="100%"
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "position": "absolute",
                "start": -10,
                "top": 0,
              },
              {
                "flex": 0,
                "height": "100%",
                "width": 11,
              },
            ]
          }
          width={11}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0,
                    135272488,
                    1,
                    1054760,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="start.1"
                x1="1"
                x2="0"
                y1="0"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                [
                  1,
                  "start.1",
                ]
              }
              height="100%"
              propList={
                [
                  "fill",
                ]
              }
              width={10}
              x={0}
              y={-0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth={11}
          focusable={false}
          height="100%"
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "position": "absolute",
                "start": "100%",
                "top": 0,
              },
              {
                "flex": 0,
                "height": "100%",
                "width": 11,
              },
            ]
          }
          width={11}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0,
                    135272488,
                    1,
                    1054760,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="end.1"
                x1="0"
                x2="1"
                y1="0"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                [
                  1,
                  "end.1",
                ]
              }
              height="100%"
              propList={
                [
                  "fill",
                ]
              }
              width={10}
              x={0}
              y={-0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={11}
          bbWidth="100%"
          focusable={false}
          height={11}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "position": "absolute",
                "start": 0,
                "top": -10,
              },
              {
                "flex": 0,
                "height": 11,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0,
                    135272488,
                    1,
                    1054760,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="top.1"
                x1="0"
                x2="0"
                y1="1"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                [
                  1,
                  "top.1",
                ]
              }
              height={10}
              propList={
                [
                  "fill",
                ]
              }
              width="100%"
              x={-0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={11}
          bbWidth="100%"
          focusable={false}
          height={11}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "position": "absolute",
                "start": 0,
                "top": "100%",
              },
              {
                "flex": 0,
                "height": 11,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0,
                    135272488,
                    1,
                    1054760,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="bottom.1"
                x1="0"
                x2="0"
                y1="0"
                y2="1"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                [
                  1,
                  "bottom.1",
                ]
              }
              height={10}
              propList={
                [
                  "fill",
                ]
              }
              width="100%"
              x={-0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={11}
          bbWidth={11}
          focusable={false}
          height={11}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "position": "absolute",
                "start": -10,
                "top": -10,
              },
              {
                "flex": 0,
                "height": 11,
                "width": 11,
              },
            ]
          }
          width={11}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={10}
                cy={10}
                fx={10}
                fy={10}
                gradient={
                  [
                    0,
                    135272488,
                    0.9999999999999999,
                    1054760,
                    1,
                    1054760,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="topStart.1"
                rx={10}
                ry={10}
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                [
                  1,
                  "topStart.1",
                ]
              }
              height={10}
              propList={
                [
                  "fill",
                ]
              }
              width={10}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={11}
          bbWidth={11}
          focusable={false}
          height={11}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "position": "absolute",
                "start": "100%",
                "top": -10,
                "transform": [
                  {
                    "translateX": -0,
                  },
                ],
              },
              {
                "flex": 0,
                "height": 11,
                "width": 11,
              },
            ]
          }
          width={11}
        >
          <RNSVGGroup
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={0}
                cy={10}
                fx={0}
                fy={10}
                gradient={
                  [
                    0,
                    135272488,
                    0.9999999999999999,
                    1054760,
                    1,
                    1054760,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="topEnd.1"
                rx={10}
                ry={10}
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                [
                  1,
                  "topEnd.1",
                ]
              }
              height={10}
              propList={
                [
                  "fill",
                ]
              }
              width={10}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={11}
          bbWidth={11}
          focusable={false}
          height={11}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "position": "absolute",
                "start": -10,
                "top": "100%",
                "transform": [
                  {
                    "translateY": -0,
                  },
                ],
              },
              {
                "flex": 0,
                "height": 11,
                "width": 11,
              },
            ]
          }
          width={11}
        >
          <RNSVGGroup
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={10}
                cy={0}
                fx={10}
                fy={0}
                gradient={
                  [
                    0,
                    135272488,
                    0.9999999999999999,
                    1054760,
                    1,
                    1054760,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="bottomStart.1"
                rx={10}
                ry={10}
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                [
                  1,
                  "bottomStart.1",
                ]
              }
              height={10}
              propList={
                [
                  "fill",
                ]
              }
              width={10}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={11}
          bbWidth={11}
          focusable={false}
          height={11}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "position": "absolute",
                "start": "100%",
                "top": "100%",
                "transform": [
                  {
                    "translateX": -0,
                  },
                  {
                    "translateY": -0,
                  },
                ],
              },
              {
                "flex": 0,
                "height": 11,
                "width": 11,
              },
            ]
          }
          width={11}
        >
          <RNSVGGroup
            matrix={
              [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={0}
                cy={0}
                fx={0}
                fy={0}
                gradient={
                  [
                    0,
                    135272488,
                    0.9999999999999999,
                    1054760,
                    1,
                    1054760,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="bottomEnd.1"
                rx={10}
                ry={10}
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                [
                  1,
                  "bottomEnd.1",
                ]
              }
              height={10}
              propList={
                [
                  "fill",
                ]
              }
              width={10}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth="100%"
          focusable={false}
          height="100%"
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "position": "absolute",
              },
              {
                "flex": 0,
                "height": "100%",
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGMask
                height="100%"
                maskContentUnits={1}
                maskTransform={
                  [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                maskUnits={0}
                name="maskInside.1"
                width="100%"
                x="0%"
                y="0%"
              >
                <RNSVGRect
                  fill={4294967295}
                  height="100%"
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width="100%"
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={0}
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width={0}
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={0}
                  matrix={
                    [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width={0}
                  x="100%"
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={0}
                  matrix={
                    [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width={0}
                  x={0}
                  y="100%"
                />
                <RNSVGRect
                  fill={4278190080}
                  height={0}
                  matrix={
                    [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width={0}
                  x="100%"
                  y="100%"
                />
              </RNSVGMask>
            </RNSVGDefs>
            <RNSVGRect
              fill={4279244840}
              fillOpacity={0.03}
              height="100%"
              mask="maskInside.1"
              propList={
                [
                  "fill",
                  "fillOpacity",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        onLayout={[Function]}
        pointerEvents="box-none"
        style={
          [
            {
              "alignSelf": "flex-start",
              "borderBottomLeftRadius": 0,
              "borderBottomRightRadius": 0,
              "borderTopLeftRadius": 0,
              "borderTopRightRadius": 0,
            },
            {},
            {
              "alignSelf": "stretch",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`component: DropShadowWrapper renders with disableInnerWrapper 1`] = `
<View
  pointerEvents="box-none"
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        {
          "start": 10,
          "top": 20,
        },
      ]
    }
  >
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth={41}
      focusable={false}
      height="100%"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
            "start": -40,
            "top": 0,
          },
          {
            "flex": 0,
            "height": "100%",
            "width": 41,
          },
        ]
      }
      width={41}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0,
                438654908,
                1,
                2447292,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="start.2"
            x1="1"
            x2="0"
            y1="0"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            [
              1,
              "start.2",
            ]
          }
          height="100%"
          propList={
            [
              "fill",
            ]
          }
          width={40}
          x={0}
          y={-0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth={41}
      focusable={false}
      height="100%"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
            "start": "100%",
            "top": 0,
          },
          {
            "flex": 0,
            "height": "100%",
            "width": 41,
          },
        ]
      }
      width={41}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0,
                438654908,
                1,
                2447292,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="end.2"
            x1="0"
            x2="1"
            y1="0"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            [
              1,
              "end.2",
            ]
          }
          height="100%"
          propList={
            [
              "fill",
            ]
          }
          width={40}
          x={0}
          y={-0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={41}
      bbWidth="100%"
      focusable={false}
      height={41}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
            "start": 0,
            "top": -40,
          },
          {
            "flex": 0,
            "height": 41,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0,
                438654908,
                1,
                2447292,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="top.2"
            x1="0"
            x2="0"
            y1="1"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            [
              1,
              "top.2",
            ]
          }
          height={40}
          propList={
            [
              "fill",
            ]
          }
          width="100%"
          x={-0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={41}
      bbWidth="100%"
      focusable={false}
      height={41}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
            "start": 0,
            "top": "100%",
          },
          {
            "flex": 0,
            "height": 41,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              [
                0,
                438654908,
                1,
                2447292,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="bottom.2"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            [
              1,
              "bottom.2",
            ]
          }
          height={40}
          propList={
            [
              "fill",
            ]
          }
          width="100%"
          x={-0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={41}
      bbWidth={41}
      focusable={false}
      height={41}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
            "start": -40,
            "top": -40,
          },
          {
            "flex": 0,
            "height": 41,
            "width": 41,
          },
        ]
      }
      width={41}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={40}
            cy={40}
            fx={40}
            fy={40}
            gradient={
              [
                0,
                438654908,
                0.9999999999999999,
                2447292,
                1,
                2447292,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="topStart.2"
            rx={40}
            ry={40}
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            [
              1,
              "topStart.2",
            ]
          }
          height={40}
          propList={
            [
              "fill",
            ]
          }
          width={40}
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={41}
      bbWidth={41}
      focusable={false}
      height={41}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
            "start": "100%",
            "top": -40,
            "transform": [
              {
                "translateX": -0,
              },
            ],
          },
          {
            "flex": 0,
            "height": 41,
            "width": 41,
          },
        ]
      }
      width={41}
    >
      <RNSVGGroup
        matrix={
          [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={40}
            fx={0}
            fy={40}
            gradient={
              [
                0,
                438654908,
                0.9999999999999999,
                2447292,
                1,
                2447292,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="topEnd.2"
            rx={40}
            ry={40}
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            [
              1,
              "topEnd.2",
            ]
          }
          height={40}
          propList={
            [
              "fill",
            ]
          }
          width={40}
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={41}
      bbWidth={41}
      focusable={false}
      height={41}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
            "start": -40,
            "top": "100%",
            "transform": [
              {
                "translateY": -0,
              },
            ],
          },
          {
            "flex": 0,
            "height": 41,
            "width": 41,
          },
        ]
      }
      width={41}
    >
      <RNSVGGroup
        matrix={
          [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={40}
            cy={0}
            fx={40}
            fy={0}
            gradient={
              [
                0,
                438654908,
                0.9999999999999999,
                2447292,
                1,
                2447292,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="bottomStart.2"
            rx={40}
            ry={40}
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            [
              1,
              "bottomStart.2",
            ]
          }
          height={40}
          propList={
            [
              "fill",
            ]
          }
          width={40}
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={41}
      bbWidth={41}
      focusable={false}
      height={41}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
            "start": "100%",
            "top": "100%",
            "transform": [
              {
                "translateX": -0,
              },
              {
                "translateY": -0,
              },
            ],
          },
          {
            "flex": 0,
            "height": 41,
            "width": 41,
          },
        ]
      }
      width={41}
    >
      <RNSVGGroup
        matrix={
          [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={0}
            fx={0}
            fy={0}
            gradient={
              [
                0,
                438654908,
                0.9999999999999999,
                2447292,
                1,
                2447292,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="bottomEnd.2"
            rx={40}
            ry={40}
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            [
              1,
              "bottomEnd.2",
            ]
          }
          height={40}
          propList={
            [
              "fill",
            ]
          }
          width={40}
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth="100%"
      focusable={false}
      height="100%"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "position": "absolute",
          },
          {
            "flex": 0,
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGMask
            height="100%"
            maskContentUnits={1}
            maskTransform={
              [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            maskUnits={0}
            name="maskInside.2"
            width="100%"
            x="0%"
            y="0%"
          >
            <RNSVGRect
              fill={4294967295}
              height="100%"
              propList={
                [
                  "fill",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={0}
              propList={
                [
                  "fill",
                ]
              }
              width={0}
              x={0}
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={0}
              matrix={
                [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              propList={
                [
                  "fill",
                ]
              }
              width={0}
              x="100%"
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={0}
              matrix={
                [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              propList={
                [
                  "fill",
                ]
              }
              width={0}
              x={0}
              y="100%"
            />
            <RNSVGRect
              fill={4278190080}
              height={0}
              matrix={
                [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              propList={
                [
                  "fill",
                ]
              }
              width={0}
              x="100%"
              y="100%"
            />
          </RNSVGMask>
        </RNSVGDefs>
        <RNSVGRect
          fill={4280637372}
          fillOpacity={0.1}
          height="100%"
          mask="maskInside.2"
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          width="100%"
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      [
        {
          "alignSelf": "flex-start",
          "borderBottomLeftRadius": 0,
          "borderBottomRightRadius": 0,
          "borderTopLeftRadius": 0,
          "borderTopRightRadius": 0,
        },
        {},
        {
          "alignSelf": "stretch",
        },
      ]
    }
  />
</View>
`;
